[project]
name = "embedtune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "gensim>=4.4.0",
    "numpy>=2.3.4",
    "peft>=0.18.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
